--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <div class="footer">i</div>
     </section>
   </main>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
